# c-json

./: CMakeLists.txt  main.c
.github/workflows/: tests.yaml
formater/: formater.c  formater.h
parser/: parser.c  parser.h  stream_parser.c  stream_parser.h  value_parser.c  value_parser.h
tests/: parser_tests.c  tests.c  tests.h  value_parser_tests.c
type/: factory.c  factory.h  types.h
